// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingIndicator > matches snapshot with custom props 1`] = `
<div>
  <div
    aria-label="Please wait..."
    class="inline-flex items-center gap-3 text-sm text-slate-600 custom"
    role="status"
  >
    <span
      class="inline-block animate-spin rounded-full border-2 border-slate-300 border-t-ink"
      style="width: 48px; height: 48px;"
    />
    <span>
      Please wait...
    </span>
  </div>
</div>
`;

exports[`LoadingIndicator > matches snapshot with default props 1`] = `
<div>
  <div
    aria-label="Loading"
    class="inline-flex items-center gap-3 text-sm text-slate-600 "
    role="status"
  >
    <span
      class="inline-block animate-spin rounded-full border-2 border-slate-300 border-t-ink"
      style="width: 32px; height: 32px;"
    />
    <span>
      Loading
    </span>
  </div>
</div>
`;
